<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <EditText
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_default"
        android:hint="@string/nameTextHint"
        android:padding="10dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:singleLine="true"
        android:layout_weight="3"
        android:textColor="@color/colorOrange"
        android:textSize="@dimen/text_size"
        />
        <Button
            android:id="@+id/okButton"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_margin="10dp"

            android:text="@string/okButtonText" />
    </LinearLayout>


        <Button
            android:id="@+id/vibrateToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/toggleButtonStyle"
            android:text="@string/vibrationDescOn" />



        <Button
            android:id="@+id/soundToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/toggleButtonStyle"
            android:text="@string/soundDescOn" />




</LinearLayout>


</RelativeLayout>