<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:id="@+id/levelParentItem"
    android:orientation="vertical"
    tools:context="com.mindgame.activities.LevelScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/levelMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/levelMenuText"
            style="@style/menuStyle"
         />


        <View
            android:id="@+id/levelDivider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorOrange"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            />

        <Button
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            style="@style/buttonStyle"
            android:text="@string/easyButtonText" />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            style="@style/buttonStyle"
            android:text="@string/mediumButtonText" />

        <Button
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            style="@style/buttonStyle"
            android:text="@string/hardButtonText" />

    </LinearLayout>

</LinearLayout>