<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:gravity="center"
    tools:context="com.mindgame.activities.MenuScreenActivity">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gameMenuTitle"
                style="@style/menuStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gameMenuText" />


            <View
                android:id="@+id/playerModeDivider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:background="@color/colorOrange" />

            <Button
                android:id="@+id/playButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/playButtonText" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/settingsButtonText" />

            <Button
                android:id="@+id/quitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/quitButtonText" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>