<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.mindgame.activities.PlayerModeScreenActivity">




    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_margin="50dp"
                >

                <TextView
                    android:id="@+id/playerModeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/playerModeText"
                    style="@style/menuStyle"
                 />

                <View
                    android:id="@+id/playerModeDivider"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="50dp"
                    android:textColor="@color/colorOrange"

                    android:layout_marginRight="50dp"
                    android:background="@color/colorOrange"
                    />

                <Button
                    android:id="@+id/singlePlayerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    style="@style/buttonStyle"

                    android:text="@string/singlePlayerButtonText" />

                <Button
                    android:id="@+id/multiPlayerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    style="@style/buttonStyle"

                    android:text="@string/multiPlayerButtonText" />

            </LinearLayout>
    </RelativeLayout>


</RelativeLayout>